# enum_is

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
tests/: test.rs
