[package]
name = "enum_is"
version = "0.2.1"
edition = "2024"
license = "MIT"
readme = "README.md"
categories = ["rust-patterns"]
repository = "https://github.com/beborngod/enum_is"
description = "Enum helper derive: auto-generate is_<variant>() methods for enums"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
heck = "0.5"
